--- a/mytodoapp/todo/static/todo/style.css
+++ b/mytodoapp/todo/static/todo/style.css
@@ -2,19 +2,11 @@ body {
     background-color: grey;
 }
 
-#todobody {
-    border: 10px solid crimson;
-    /* margin: 0 auto; */
-    width: 70%;
-    height: 80%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.todo-container {
-    background-color: bisque;
-    display: flex;
-    justify-content: space-between;
+.todo-content {
+    border: 2px solid black;
+    margin-top: 15px;
+    width: 60%;
+    min-height: 100px;
+    hyphens: auto;
+    word-wrap: break-word;
 }
