--- a/mytodoapp/todo/templates/todo/todo_create.html
+++ b/mytodoapp/todo/templates/todo/todo_create.html
@@ -1,6 +1,19 @@
+{% extends 'todo/base.html' %}
+
+
+{% block content %}
+
+
+<div class="card w-75 mx-auto bg-warning" style="margin:20px">
 <p>Todo Create</p>
-<form action="" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Add todo">
-</form>
+<div class="card-body">
+    <form action="" method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="Save" class="btn btn-primary btn-lg">
+
+    </form>   
+</div>
+</div>   
+
+{% endblock %}
