--- a/mytodoapp/todo/templates/todo/index.html
+++ b/mytodoapp/todo/templates/todo/index.html
@@ -20,7 +20,7 @@
 <div class="todo-container">
 {% for todo in todo_list %}
     {% if todo.complete == False %}
-<div class="card w-75 mx-auto bg-warning" style="margin:20px">
+<div class="card w-50 mx-auto bg-warning" style="margin:20px">
     <div class="card-body">
         <h5 class="card-title">{{ todo.title }}</h5>
         <p class="card-text">
@@ -33,14 +33,14 @@
     </div>
     </div> 
 {% else %} 
-<div class="card w-75 mx-auto bg-success" style="margin:20px">
+<div class="card w-50 mx-auto bg-info" style="margin:20px">
     <div class="card-body">
         <h5 class="card-title">{{ todo.title }}</h5>
         <p class="card-text">
         {{ todo.description|truncatechars:100}}
         </p>
         <p>
-            <i class="text-danger">Last updated at {{ todo.modified }}</i>
+            <i class="text-muted">Last updated at {{ todo.modified }}</i>
             <!-- text-muted -->
         </p>
         <a href="{% url 'todo:todo_edit' todo.id %}" class="btn btn-primary">View</a>
@@ -49,6 +49,12 @@
     {% endif %}
 {% endfor %}
 </div>
+
+<style>
+    body {
+        /* background-color: rgb(34, 29, 29); */
+    }
+</style>
 
 {% endblock %}
 
