styled the register page

--- a/mytodoapp/todo/templates/todo/todo_update.html
+++ b/mytodoapp/todo/templates/todo/todo_update.html
@@ -4,8 +4,8 @@
 {% block content %}
 
 
- <div class="card w-75 mx-auto bg-warning" style="margin:20px">
-        <h5>To do update</h5>
+ <div class="card w-75 mx-auto bg-dark text-white" style="margin-top:20%">
+        <h5>update todo</h5>
 
     <div class="card-body">
         <form action="" method="post">
@@ -22,6 +22,11 @@
 </div>   
 
 <style>
+   #id_title, textarea {
+      color: white;
+   }
+   
+
     .btn-danger {
         position: absolute;
         right: 20px;
