--- a/mytodoapp/todo/templates/todo/base.html
+++ b/mytodoapp/todo/templates/todo/base.html
@@ -19,10 +19,17 @@
           <li class="nav-item">
             {% if request.user.is_authenticated %}
             <a class="nav-link" href="{% url 'todo:logout' %}">
-                <span class="glyphicon glyphicon-log-in">Logout</span>
+                <span>Logout</span>
             </a>
             {% endif %}
           </li>
+          
+          <li class="nav-item">
+             <a class="nav-link" href="#">
+                <span>Profile</span>
+             </a>             
+          </li>
+          
         </ul>
     </nav>   
     {% block content %}
