--- a/mytodoapp/todo/templates/todo/register.html
+++ b/mytodoapp/todo/templates/todo/register.html
@@ -6,26 +6,50 @@
 <h3>Register</h3>
 
 
-<div class="register-form ">
+<div class="register-form bg-dark text-white">
     <form action="" method="post">
         {% csrf_token %}
         {{ form.as_p }}
+        <p class="btn btn-primary">
         <input type="submit" value="submit">
+        </p>
     </form>
+    <p class="text-muted">
+       Already have an account? <a href="{% url 'todo:login' %}">login</a>
+    </p>
 
 <style>
+input[type=submit]{
+   background: none;
+   border: none;
+   color: white;
+}
 
+.helptext, li {
+   color: grey;
+}
 
 .register-form {
-    width: 60vw;
+    width: 80vw;
     border: 2px solid black;
-    margin: 0 auto;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 20% auto;
 }
 
-input[type=text], input[type=password] {
-    width: 100%;
-}
 
+    input[type=text], input[type=password] {
+        text-align: center;
+        outline: none;
+        border: 1px solid green;
+        width: 100%;
+        transition: border  2s;
+    }
+
+    input[type=text]:hover, input[type=password]:hover {
+        border: 1px solid red;
+    }
+    
 </style>
 
 {% endblock %}
