--- a/mytodoapp/todo/templates/todo/todo_create.html
+++ b/mytodoapp/todo/templates/todo/todo_create.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 
-<div class="card w-75 mx-auto bg-warning" style="margin:20px">
+<div class="card w-75 mx-auto bg-dark text-white" style="margin:20px">
 <p>Todo Create</p>
 <div class="card-body">
     <form action="" method="post">
@@ -15,5 +15,14 @@
     </form>   
 </div>
 </div>   
+
+<style>
+
+#id_title, textarea {
+   background: white;
+}
+
+   
+</style>
 
 {% endblock %}
