--- a/mytodoapp/todo/templates/todo/register.html
+++ b/mytodoapp/todo/templates/todo/register.html
@@ -38,7 +38,7 @@ input[type=submit]{
 }
 
 
-    input[type=text], input[type=password] {
+    input[type=text], input[type=email], input[type=password] {
         text-align: center;
         outline: none;
         border: 1px solid green;
@@ -46,7 +46,7 @@ input[type=submit]{
         transition: border  2s;
     }
 
-    input[type=text]:hover, input[type=password]:hover {
+    input[type=text]:hover, input[type=email]:hover, input[type=password]:hover {
         border: 1px solid red;
     }
     
