--- a/mytodoapp/todo/templates/todo/todo_create.html
+++ b/mytodoapp/todo/templates/todo/todo_create.html
@@ -4,8 +4,8 @@
 {% block content %}
 
 
-<div class="card w-75 mx-auto bg-dark text-white" style="margin:20px">
-<p>Todo Create</p>
+<div class="card mx-auto bg-dark text-white" style="margin:20px">
+<!-- <p>Todo Create</p> -->
 <div class="card-body">
     <form action="" method="post">
         {% csrf_token %}
@@ -22,6 +22,37 @@
    background: white;
 }
 
+/* media queries  */
+.card {
+            width: 90%;
+            margin-top: 20px;
+        }
+
+    @media only screen and (max-width: 1000px) {
+    .card {
+        width: 75%;
+    }
+}
+
+    @media only screen and (max-width: 800px) {
+    .card {
+        width: 75%;
+    }
+}
+
+    @media only screen and (max-width: 700px) {
+        .card {
+            width: 95%;
+        }
+    }
+
+
+
+    @media only screen and (min-width: 1000px) {
+        .card {
+            width: 50%;
+        }
+    }
    
 </style>
 
