--- a/mytodoapp/todo/templates/todo/todo_create.html
+++ b/mytodoapp/todo/templates/todo/todo_create.html
@@ -5,7 +5,7 @@
 
 
 <div class="card mx-auto bg-dark text-white" style="margin:20px">
-<!-- <p>Todo Create</p> -->
+<h5>create todo</h5>
 <div class="card-body">
     <form action="" method="post">
         {% csrf_token %}
@@ -23,7 +23,7 @@
 }
 
 /* media queries  */
-.card {
+/* .card {
             width: 90%;
             margin-top: 20px;
         }
@@ -53,7 +53,7 @@
             width: 50%;
         }
     }
-   
+    */
 </style>
 
 {% endblock %}
