--- a/mytodoapp/todo/templates/todo/todo_update.html
+++ b/mytodoapp/todo/templates/todo/todo_update.html
@@ -5,8 +5,7 @@
 
 
  <div class="card mx-auto bg-dark text-white">
-    <!-- style="margin-top:20%" -->
-        <!-- <h5>update todo</h5> -->
+        <h5>update todo</h5>
 
     <div class="card-body">
         <form action="" method="post">
@@ -23,10 +22,7 @@
 </div>   
 
 <style>
-   #id_title, textarea {
-      /* color: white; */
-   }
-   
+
 
     .btn-danger {
         position: absolute;
@@ -39,38 +35,10 @@
         text-decoration: none;
     }
 
-/* media queries  */
+
     .card {
-            width: 90%;
             margin-top: 20px;
         }
-
-    @media only screen and (max-width: 1000px) {
-    .card {
-        width: 75%;
-    }
-}
-
-    @media only screen and (max-width: 800px) {
-    .card {
-        width: 75%;
-    }
-}
-
-    @media only screen and (max-width: 700px) {
-        .card {
-            width: 95%;
-        }
-    }
-
-
-
-    @media only screen and (min-width: 1000px) {
-        .card {
-            width: 50%;
-        }
-    }
-
 
 
 </style>
