--- a/mytodoapp/todo/templates/todo/base.html
+++ b/mytodoapp/todo/templates/todo/base.html
@@ -7,31 +7,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'todo/style.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Doppio+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+    
     <title>Todo</title>
 </head>
 <body>
     <nav class="navbar navbar-light bg-dark px-3">
-        <a class="navbar-brand text-muted" href="{% url 'todo:todo_list' %}">TodoAPP</a>
+        <a class="navbar-brand text-muted" href="{% url 'todo:todo_list' %}">
+            <span class="material-icons"> home </span>
+            <span class="home-label">TodoApp</span>
+
+        </a>
+
         <ul class="nav">
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'todo:todo_create' %}">Add Todo</a>
-          </li>
-          <li class="nav-item">
             {% if request.user.is_authenticated %}
-            <a class="nav-link" href="{% url 'todo:logout' %}">
-                <span>Logout</span>
-            </a>
-            {% endif %}
-          </li>
-          
           <li class="nav-item">
+            <a class="nav-link" href="{% url 'todo:todo_create' %}">
+                <span class="material-icons"> add </span>
+                <span class="label">add todo</span>
+            </a>
+            
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'todo:logout' %}">
+                <span class="material-icons"> logout </span>
+                <span class="label">logout</span>
+            </a>
+          </li>
+
+          {% endif %}
+          
+          <!-- <li class="nav-item">
              <a class="nav-link" href="#">
                 <span>Profile</span>
              </a>             
-          </li>
+          </li> -->
           
         </ul>
     </nav> 
+
+    
 
     {% if messages %}
     {% for message in messages %}
@@ -45,5 +64,61 @@
     {% block content %}
         
     {% endblock %}
+    <style>
+        body {
+            background-color: gray;
+        }
+
+        h5 {
+        font-family: 'Berkshire Swash', cursive;
+    }
+
+    p {
+        font-family: 'Doppio One', sans-serif;
+        font-size: 14px;
+    }
+
+    span.label {
+        float: right;
+        margin-left: 2px;
+    }
+
+    span.home-label {
+        float: right;
+    }
+
+    .card {
+        width: 90%;
+    }
+
+    @media only screen and (max-width: 1000px) {
+    .card {
+        width: 55%;
+    }
+}
+
+
+    @media only screen and (max-width: 800px) {
+    .card {
+        width: 75%;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .card {
+        width: 95%;
+    }
+}
+
+
+
+@media only screen and (min-width: 1000px) {
+    .card {
+        width: 50%;
+    }
+}
+ 
+
+    </style>
 </body>
 </html>
