--- a/mytodoapp/todo/templates/todo/register.html
+++ b/mytodoapp/todo/templates/todo/register.html
@@ -6,7 +6,7 @@
 <h3>Register</h3>
 
 
-<div class="register-form bg-dark text-white">
+<div class="card bg-dark text-white">
     <form action="" method="post">
         {% csrf_token %}
         {{ form.as_p }}
@@ -29,12 +29,12 @@ input[type=submit]{
    color: grey;
 }
 
-.register-form {
+.card {
     width: 80vw;
     border: 2px solid black;
     border-radius: 10px;
     padding: 20px;
-    margin: 20% auto;
+    margin: 100px auto;
 }
 
 
@@ -49,7 +49,8 @@ input[type=submit]{
     input[type=text]:hover, input[type=email]:hover, input[type=password]:hover {
         border: 1px solid red;
     }
-    
+
+   
 </style>
 
 {% endblock %}
