--- a/mytodoapp/todo/templates/todo/login.html
+++ b/mytodoapp/todo/templates/todo/login.html
@@ -4,15 +4,10 @@
 {% block content %}
 
 <div class="login-form ">
- <div class="content bg-dark">
+ <div class="content bg-dark text-warning">
     <form action="" method="post">
         {% csrf_token %}
-        <p>
-            <input type="text" name="username" id="id_username" placeholder="username" required>
-        </p>    
-        <p>
-            <input type="password" name="password" id="id_password" placeholder="password" required>
-        </p>
+         {{ form.as_p }}
         <p class="btn btn-primary">
             <input type="submit" value="login">
         </p>
@@ -23,6 +18,14 @@
  </div>
 </div>
 
+<script>
+   function myFunction() {
+      const username = document.getElementById("id_username").placeholder = "username";
+
+      const password = document.getElementById("id_password").placeholder = "password";
+   }
+   myFunction()
+</script>
 
 <style>
 
