--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'todo/style.css' %}">
+    <link rel="shortcut icon" type="image/jpg" href="{% static 'todo/todo.ico' %}"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -118,6 +119,16 @@
     }
 }
  
+
+    .card {
+            margin-top: 20px;
+        }
+
+        #id_description, #id_title {
+            width: 100%;
+        }
+
+
 
     </style>
 </body>
